2009-01-16  Jürg Billeter  <j@bitron.ch>

	* tests/:

	Rearrange test cases

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* tests/Makefile.am:
	* tests/basic-types/arrays.test:

	Improve array tests

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* tests/basic-types/strings.test:

	Improve string tests

2009-01-15  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:

	Ignore BusName sender parameters in marshalling code

2009-01-15  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala:

	Fix accessor detection for properties

	* vapi/: regenerated

2009-01-15  Jürg Billeter  <j@bitron.ch>

	* vapi/sdl-mixer.vapi:

	Fix syntax error, patch by Frederik

2009-01-15  Jürg Billeter  <j@bitron.ch>

	* vala/valaobjectcreationexpression.vala:

	Track usage of creation methods to avoid bogus warnings from the
	flow analyzer

2009-01-15  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusservermodule.vala:

	Fix generated introspection information when using DBus.BusName
	sender parameter

2009-01-15  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:

	Accept numbers with characters as identifiers where possible

2009-01-14  Jürg Billeter  <j@bitron.ch>

	* vala/valacodewriter.vala:

	Improve output for owned property getters

	* vapigen/valagidlparser.vala:

	Getters of properties without accessor have to return owned value

	* vapi/: regenerated

2009-01-14  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodememberaccessmodule.vala:

	Report error when using getters of properties with unowned return
	value and without accessor, fixes bug 567750

2009-01-14  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:

	Improve syntax error message when expecting declaration

2009-01-13  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/vala.h:

	Remove obsolete vala.h

2009-01-13  Jürg Billeter  <j@bitron.ch>

	* vala/valacodecontext.vala:
	* gobject/valaccodebasemodule.vala:
	* compiler/valacompiler.vala:
